--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,61 @@ formulaires/configurer_type_urls.php -text
 formulaires/editer_url_objet.html -text
 formulaires/editer_url_objet.php -text
 /htaccess.txt -text
+lang/urls_ar.php -text
+lang/urls_ast.php -text
+lang/urls_br.php -text
+lang/urls_bs.php -text
+lang/urls_ca.php -text
+lang/urls_co.php -text
+lang/urls_cpf_hat.php -text
+lang/urls_cs.php -text
+lang/urls_de.php -text
+lang/urls_el.php -text
+lang/urls_en.php -text
+lang/urls_eo.php -text
+lang/urls_es.php -text
+lang/urls_et.php -text
+lang/urls_eu.php -text
+lang/urls_fa.php -text
+lang/urls_fi.php -text
 lang/urls_fr.php -text
+lang/urls_fr_biblio.php -text
+lang/urls_fr_stal.php -text
+lang/urls_fr_tu.php -text
+lang/urls_gl.php -text
+lang/urls_he.php -text
+lang/urls_hi.php -text
+lang/urls_hr.php -text
+lang/urls_hu.php -text
+lang/urls_is.php -text
+lang/urls_it.php -text
+lang/urls_it_fem.php -text
+lang/urls_km.php -text
+lang/urls_ko.php -text
+lang/urls_lb.php -text
+lang/urls_lt.php -text
+lang/urls_lv.php -text
+lang/urls_nb.php -text
+lang/urls_ne.php -text
+lang/urls_nl.php -text
+lang/urls_no.php -text
+lang/urls_oc_ni.php -text
+lang/urls_pl.php -text
+lang/urls_ps.php -text
+lang/urls_pt.php -text
+lang/urls_pt_br.php -text
+lang/urls_ro.php -text
+lang/urls_ru.php -text
+lang/urls_sh.php -text
+lang/urls_sk.php -text
+lang/urls_sl.php -text
+lang/urls_sq.php -text
+lang/urls_sr.php -text
+lang/urls_sv.php -text
+lang/urls_th.php -text
+lang/urls_tr.php -text
+lang/urls_uk.php -text
+lang/urls_wa.php -text
 /plugin.xml -text
 prive/squelettes/contenu/controler_urls.html -text
 prive/themes/basic/images/url-16.png -text
