--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ formulaires/configurer_type_urls.php -text
 formulaires/editer_url_objet.html -text
 formulaires/editer_url_objet.php -text
 /htaccess.txt -text
+lang/urls.xml -text
 lang/urls_ar.php -text
 lang/urls_ast.php -text
 lang/urls_br.php -text
