Résoud #1951 : presentation des types d'URL : une chaine de langue urls:tite_type_xxx pour chaque type présentation par ordre alphabetique un mode urls 'simple' spip.php?page=article&id_article=3

--- a/.gitattributes
+++ b/.gitattributes
@@ -78,5 +78,6 @@ urls/libres.php -text
 urls/propres.php -text
 urls/propres2.php -text
 urls/propres_qs.php -text
+urls/simple.php -text
 urls/standard.php -text
 /urls_pipeline.php -text
