--- a/.gitattributes
+++ b/.gitattributes
@@ -65,7 +65,6 @@ lang/urls_th.php -text
 lang/urls_tr.php -text
 lang/urls_uk.php -text
 lang/urls_wa.php -text
-/plugin.xml -text
 prive/squelettes/contenu/controler_urls.html -text
 prive/themes/spip/images/url-16.png -text
 prive/themes/spip/images/url-24.png -text
@@ -91,4 +90,5 @@ urls/propres2.php -text
 urls/propres_qs.php -text
 urls/simple.php -text
 urls/standard.php -text
+/urls_administrations.php -text
 /urls_pipeline.php -text
