--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 action/editer_url.php -text
+action/supprimer_url.php -text
 action/urls_actualiser.php -text
 action/urls_liberer.php -text
 action/urls_verrouiller.php -text
@@ -69,9 +70,12 @@ lang/urls_th.php -text
 lang/urls_tr.php -text
 lang/urls_uk.php -text
 lang/urls_wa.php -text
+prive/objets/editer/url.html -text
+prive/objets/liste/urls.html -text
 prive/squelettes/contenu/configurer_urls.html -text
 prive/squelettes/contenu/configurer_urls_fonctions.php -text
 prive/squelettes/contenu/controler_urls.html -text
+prive/style_prive_plugin_urls.html -text
 prive/themes/spip/images/url-16.png -text
 prive/themes/spip/images/url-24.png -text
 prive/themes/spip/images/url-32.png -text
