La page de controle des urls est remaniee : elle se contente d'afficher la liste de toutes les urls, et de permettre de rechercher dedans. On peut supprimer des URLS, et forcer la mise a jour de toutes les urls des objets ayant une url. On se limite a cela a ce stade. Il est possible de desactiver completement cette page avec l'autorisation 'administrer','url'

--- a/.gitattributes
+++ b/.gitattributes
@@ -75,6 +75,7 @@ prive/objets/liste/urls.html -text
 prive/squelettes/contenu/configurer_urls.html -text
 prive/squelettes/contenu/configurer_urls_fonctions.php -text
 prive/squelettes/contenu/controler_urls.html -text
+prive/squelettes/navigation/controler_urls.html -text
 prive/style_prive_plugin_urls.html -text
 prive/themes/spip/images/url-16.png -text
 prive/themes/spip/images/url-24.png -text
