--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ lang/paquet-urls.xml -text
 lang/paquet-urls_ar.php -text
 lang/paquet-urls_en.php -text
 lang/paquet-urls_fa.php -text
+lang/paquet-urls_it.php -text
 lang/paquet-urls_ru.php -text
 lang/paquet-urls_sk.php -text
 lang/urls.xml -text
