--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@ lang/paquet-urls_de.php -text
 lang/paquet-urls_en.php -text
 lang/paquet-urls_fa.php -text
 lang/paquet-urls_it.php -text
+lang/paquet-urls_nl.php -text
 lang/paquet-urls_pt_br.php -text
 lang/paquet-urls_ru.php -text
 lang/paquet-urls_sk.php -text
