langues (paquet-urls)

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ lang/paquet-urls.xml -text
 lang/paquet-urls_ar.php -text
 lang/paquet-urls_de.php -text
 lang/paquet-urls_en.php -text
+lang/paquet-urls_es.php -text
 lang/paquet-urls_fa.php -text
 lang/paquet-urls_it.php -text
 lang/paquet-urls_nl.php -text
