--- a/.gitattributes
+++ b/.gitattributes
@@ -44,6 +44,7 @@ lang/urls_eu.php -text
 lang/urls_fa.php -text
 lang/urls_fi.php -text
 lang/urls_fr.php -text
+lang/urls_fr_fem.php -text
 lang/urls_fr_stal.php -text
 lang/urls_fr_tu.php -text
 lang/urls_gl.php -text
