--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@ lang/paquet-urls_de.php -text
 lang/paquet-urls_en.php -text
 lang/paquet-urls_es.php -text
 lang/paquet-urls_fa.php -text
+lang/paquet-urls_fr_fem.php -text
 lang/paquet-urls_it.php -text
 lang/paquet-urls_nl.php -text
 lang/paquet-urls_pt_br.php -text
@@ -45,6 +46,7 @@ lang/urls_fa.php -text
 lang/urls_fi.php -text
 lang/urls_fr.php -text
 lang/urls_fr_biblio.php -text
+lang/urls_fr_fem.php -text
 lang/urls_fr_stal.php -text
 lang/urls_fr_tu.php -text
 lang/urls_gl.php -text
