--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ lang/paquet-urls_en.php -text
 lang/paquet-urls_es.php -text
 lang/paquet-urls_fa.php -text
 lang/paquet-urls_fr_fem.php -text
+lang/paquet-urls_fr_tu.php -text
 lang/paquet-urls_it.php -text
 lang/paquet-urls_nl.php -text
 lang/paquet-urls_pt_br.php -text
