[Salvatore] [source:_core_/plugins/urls_etendues/lang/ urls] Export depuis http://trad.spip.net de la langue oc_ni_mis

--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,7 @@ lang/urls_it.php -text
 lang/urls_it_fem.php -text
 lang/urls_lb.php -text
 lang/urls_nl.php -text
+lang/urls_oc_ni_mis.php -text
 lang/urls_pt.php -text
 lang/urls_pt_br.php -text
 lang/urls_ro.php -text
