--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@ lang/paquet-urls_fr_fem.php -text
 lang/paquet-urls_fr_tu.php -text
 lang/paquet-urls_it.php -text
 lang/paquet-urls_nl.php -text
+lang/paquet-urls_oc_ni_mis.php -text
 lang/paquet-urls_pt_br.php -text
 lang/paquet-urls_ru.php -text
 lang/paquet-urls_sk.php -text
