[Salvatore] [source:_core_/plugins/urls_etendues/lang/ paquet-urls] Export depuis http://trad.spip.net de la langue uk

--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,7 @@ lang/paquet-urls_oc_ni_mis.php -text
 lang/paquet-urls_pt_br.php -text
 lang/paquet-urls_ru.php -text
 lang/paquet-urls_sk.php -text
+lang/paquet-urls_uk.php -text
 lang/urls.xml -text
 lang/urls_ar.php -text
 lang/urls_ast.php -text
