[Salvatore] [source:_core_/plugins/urls_etendues/lang/ paquet-urls] Export depuis http://trad.spip.net de la langue br

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@ formulaires/editer_url_objet.php -text
 /htaccess.txt -text
 lang/paquet-urls.xml -text
 lang/paquet-urls_ar.php -text
+lang/paquet-urls_br.php -text
 lang/paquet-urls_de.php -text
 lang/paquet-urls_en.php -text
 lang/paquet-urls_es.php -text
