[Salvatore] [source:_core_/plugins/urls_etendues/lang/ paquet-urls] Export depuis http://trad.spip.net de la langue eo

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@ lang/paquet-urls_ar.php -text
 lang/paquet-urls_br.php -text
 lang/paquet-urls_de.php -text
 lang/paquet-urls_en.php -text
+lang/paquet-urls_eo.php -text
 lang/paquet-urls_es.php -text
 lang/paquet-urls_fa.php -text
 lang/paquet-urls_fr_fem.php -text
