un fichier _autoriser pour le plugin urls_etendues + phpdoc
reste à trouver à quoi sert et où est utilisée autoriser_configurerurls_menu_dist()

--- a/.gitattributes
+++ b/.gitattributes
@@ -88,5 +88,6 @@ urls/propres2.php -text
 urls/propres_qs.php -text
 urls/simple.php -text
 /urls_administrations.php -text
+/urls_autoriser.php -text
 /urls_ieconfig.php -text
 /urls_pipeline.php -text
