[Salvatore] [source:_core_/plugins/urls_etendues/lang/ urls] Export depuis http://trad.spip.net de la langue ja

--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,7 @@ lang/urls_fr_tu.php -text
 lang/urls_gl.php -text
 lang/urls_it.php -text
 lang/urls_it_fem.php -text
+lang/urls_ja.php -text
 lang/urls_lb.php -text
 lang/urls_nl.php -text
 lang/urls_oc_ni_mis.php -text
